<resources>
    <string name="app_name">Desafio_Leal_Apps</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salvar">Salvar</string>
    <string name="descricao">Descrição</string>
    <string name="nome">Nome</string>
    <string name="observacoes">Observações</string>
    <string name="foto">Foto</string>
    <string name="adicionar_novo_exercicio">Adicionar novo exercício</string>
    <string name="adicionar_novo_treino">Adicionar novo treino</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastrar_nova_conta">Cadastrar nova conta</string>
    <string name="cancel">Cancel</string>
    <string name="exercicios">EXERCÍCIOS</string>
</resources>